[ASN-75] fix: 검색 조회 개선